--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.10.0"
   }
 }
