--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-csp-header": "^5.2.1",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
